@@ -41,3 +41,4 @@
 <!ENTITY api-liste-access.label "Lists of allowed sites (double-click to remove)">
 <!ENTITY api-liste-domain.label "Domain">
 <!ENTITY api-liste-keyauth.label "Key">
+<!ENTITY use-gpg-agent-checkbox "Active Gpg-agent (warnig, can make issues...)">
